--- a/front-end/index.html
+++ b/front-end/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lation Shop - Elegancy in every purchase</title>
   </head>
-  <body class="bg-blue-50/70">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
